[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/MainMenu/_Graphics/FontTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/MainMenu/_Graphics/play_game.png" type="Texture" id=3]
[ext_resource path="res://Assets/MainMenu/_Graphics/instructions.png" type="Texture" id=4]
[ext_resource path="res://Assets/MainMenu/_Graphics/exit.png" type="Texture" id=5]

[node name="MainMenu" type="Node"]

script = ExtResource( 1 )
instruction_scene = null

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1924.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_bottom = 30
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 30.0
margin_right = 1894.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1886.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_right = 400
custom_constants/margin_top = 0
custom_constants/margin_left = 400
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_right = 1486.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Hyper Space Man"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="Bottom" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 404.0
margin_right = 1886.0
margin_bottom = 952.0
rect_min_size = Vector2( 0, 500 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Left" type="Container" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 623.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 627.0
margin_right = 1259.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Play" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 632.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "Anchor", "Size Flags", "custom_constants" ]

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer/Play" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 10.0
margin_right = 632.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Margin", "Textures" ]

[node name="Instructions" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 184.0
margin_right = 632.0
margin_bottom = 364.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "Size Flags", "Visibility", "custom_constants" ]

[node name="InstructionButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer/Instructions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 10.0
margin_right = 632.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Exit" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 368.0
margin_right = 632.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "Size Flags", "Visibility", "custom_constants" ]

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer/Exit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 10.0
margin_right = 632.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="Right" type="Container" parent="CanvasLayer/MarginContainer/VBoxContainer/Bottom" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1263.0
margin_right = 1886.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer/Play/PlayButton" to="." method="_on_PlayButton_down"]

[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer/Instructions/InstructionButton" to="." method="_on_InstructionButton_down"]

[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/Bottom/VBoxContainer/Exit/ExitButton" to="." method="_on_ExitButton_down"]


